# fOptimizer

./: .gitignore  README.md  pyproject.toml  start_foptimizer.bat
src/foptimizer/backend/: logic.py
src/foptimizer/backend/tools/: audio_conversion.py  deduplication.py  image_conversion.py  misc.py  patcher.py  remove_redundancies.py
src/foptimizer/gui/: app.py
