[project]
name = "fOptimizer"
version = "1.6.1"
description = "A Source Engine asset optimization tool for models, textures, and audio."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "foxington" }]
requires-python = ">=3.11, !=3.13.0"
keywords = ["source-engine", "optimization", "gmod", "vtf", "mdl"]
dependencies = [
    "sourcepp == 2026.1.3",
    "numpy == 2.4.0",
    "customtkinter == 5.2.2",
    "ctktooltip == 0.8",
    "pydub == 0.25.1",
    "audioop-lts == 0.2.2",
]

[project.scripts]
foptimizer = "foptimizer.gui.app:main"

[project.urls]
Homepage = "https://github.com/fxington/foptimizer"

[tool.setuptools.packages.find]
where = ["src"]
